--- a/tikitwo-steam-cleaner/App.xaml
+++ b/tikitwo-steam-cleaner/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="tikitwo_steam_cleaner.App"
+    x:Class="tikitwo_steam_cleaner.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:tikitwo_steam_cleaner"
+    xmlns:local="using:tikitwo_steam_cleaner.UWP"
     RequestedTheme="Light">
 
 </Application>
