--- a/tikitwo-steam-cleaner/MainView.xaml
+++ b/tikitwo-steam-cleaner/MainView.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="tikitwo_steam_cleaner.MainPage"
+    x:Class="tikitwo_steam_cleaner.UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:tikitwo_steam_cleaner"
+    xmlns:local="using:tikitwo_steam_cleaner.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" MinWidth="700">
