--- a/tikitwo-steam-cleaner/Views/MainView.xaml
+++ b/tikitwo-steam-cleaner/Views/MainView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="tikitwo_steam_cleaner.UWP.MainPage"
+    x:Class="tikitwo_steam_cleaner.UWP.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:tikitwo_steam_cleaner.UWP"
