--- a/tikitwo-steam-cleaner/Views/MainView.xaml
+++ b/tikitwo-steam-cleaner/Views/MainView.xaml
@@ -1,17 +1,21 @@
 ﻿<Page
-    x:Class="tikitwo_steam_cleaner.UWP.Views.MainPage"
+    x:Class="tikitwo_steam_cleaner.UAP.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:tikitwo_steam_cleaner.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="using:tikitwo_steam_cleaner.UAP.ViewModels"
     mc:Ignorable="d" MinWidth="700">
 
     <Page.TopAppBar>
         <AppBar>
-            <AppBarButton HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="5" IsCompact="True" Content="Options"  />
+            <AppBarButton HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="5" IsCompact="True" Content="Options" />
         </AppBar>
     </Page.TopAppBar>
+
+    <Page.DataContext>
+        <viewmodels:MainViewModel />
+    </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
@@ -35,7 +39,7 @@
         <Button Grid.Column="3" Grid.Row="0" Margin="5" Content="Locate Automatically" />
 
         <TextBlock Grid.Column="0" Grid.Row="1" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Custom Folders:" />
-        
+
         <TextBox Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Margin="5" VerticalAlignment="Top" Width="300" Height="128" />
 
         <!--<ListView Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Margin="5" Width="300" Height="128">
@@ -43,9 +47,9 @@
 
             </DataTemplate>
         </ListView>-->
-        
+
         <Button Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Margin="5" VerticalAlignment="Top" Content="Add Custom Folder..." />
 
-        <TextBlock Grid.Column="0" Grid.Row="4"  Margin="5" Text="more here" />
+        <TextBlock Grid.Column="0" Grid.Row="4" Margin="5" Text="more here" />
     </Grid>
 </Page>
