--- a/tikitwo-steam-cleaner/Views/MainView.xaml
+++ b/tikitwo-steam-cleaner/Views/MainView.xaml
@@ -34,7 +34,7 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Steam Folder:" />
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="5" Width="300" Height="32" />
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="5" Width="300" Height="32" Text="{Binding Path=SteamFolder, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         <Button Grid.Column="2" Grid.Row="0" Margin="5" Content="..." />
         <Button Grid.Column="3" Grid.Row="0" Margin="5" Content="Locate Automatically" />
 
