--- a/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
+++ b/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
@@ -28,13 +28,13 @@
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Steam Folder:" />
         <TextBox Grid.Column="1" Grid.Row="0" Margin="5" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" MinWidth="300"
                  Text="{Binding SteamFolder, UpdateSourceTrigger=PropertyChanged}" />
-        <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="..." />
-        <Button Grid.Column="3" Grid.Row="0" Margin="5" Padding="5" Content="Locate Automatically" />
+        <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="..." Command="{Binding GetSteamFolder}" />
+        <Button Grid.Column="3" Grid.Row="0" Margin="5" Padding="5" Content="Locate Automatically" Command="{Binding FindSteamFolder}" />
 
         <TextBlock Grid.Column="0" Grid.Row="1" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Text="Custom Folders:" />
 
-        <DataGrid Grid.Column="1" Grid.Row="1" MinHeight="200" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
-                          IsReadOnly="True">
+        <DataGrid Grid.Column="1" Grid.Row="1" MinHeight="140" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
+                  IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="Auto" Binding="{Binding Select}" Header="Path" />
             </DataGrid.Columns>
@@ -44,7 +44,6 @@
 
         <GroupBox Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2" Margin="5" Header="Redistributable packages found: 0">
             <Grid>
-
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
@@ -59,7 +58,8 @@
                 <Button Grid.Column="0" Grid.Row="0" Margin="5" Padding="5" Content="Search" />
                 <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="Remove Duplicate Packages" />
 
-                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" MinHeight="200" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
+                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" MinHeight="200" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single"
+                          AutoGenerateColumns="False"
                           IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Width="Auto" Binding="{Binding Select}" Header="Select" />
