--- a/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
+++ b/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:tikitwo_steam_cleaner.WPF.ViewModels"
     x:Class="tikitwo_steam_cleaner.WPF.Views.MainWindow"
-    mc:Ignorable="d" Title="TikiTwo Steam Cleaner" SizeToContent="WidthAndHeight" MinWidth="600" MinHeight="500">
+    mc:Ignorable="d" Title="TikiTwo Steam Cleaner" SizeToContent="WidthAndHeight">
 
     <Window.DataContext>
         <viewModels:MainViewModel />
@@ -13,36 +13,37 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Steam Folder:" />
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="5" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" MinWidth="300"
-                 Text="{Binding SteamFolder, UpdateSourceTrigger=PropertyChanged}" />
-        <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="..." Command="{Binding GetSteamFolder}" />
-        <Button Grid.Column="3" Grid.Row="0" Margin="5" Padding="5" Content="Locate Automatically" Command="{Binding FindSteamFolder}" />
+        <GroupBox Grid.Column="0" Grid.Row="0" Margin="5" Header="Folders to Search">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Text="Custom Folders:" />
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-        <DataGrid Grid.Column="1" Grid.Row="1" MinHeight="140" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
-                  IsReadOnly="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Width="Auto" Binding="{Binding Select}" Header="Path" />
-            </DataGrid.Columns>
-        </DataGrid>
+                <ListView Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Margin="5" MinWidth="300" MinHeight="140" ItemsSource="{Binding FoldersToSearch}" SelectedItem="{Binding SelectedFolder}" />
 
-        <Button Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Margin="5" Padding="5" VerticalAlignment="Top" Content="Add Custom Folder..." />
+                <Button Grid.Column="1" Grid.Row="0" Margin="5" Padding="5" Content="Locate Automatically" Command="{Binding FindSteamFolder}" />
+                <Button Grid.Column="1" Grid.Row="1" Margin="5" Padding="5" Content="Add Custom Folder..." Command="{Binding AddFolder}" />
+                <Button Grid.Column="1" Grid.Row="2" Margin="5" Padding="5" Content="Remove Selected Folder" Command="{Binding RemoveCustomFolder}" />
+            </Grid>
+        </GroupBox>
 
-        <GroupBox Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2" Margin="5" Header="Redistributable packages found: 0">
+        <GroupBox Grid.Column="0" Grid.Row="1" Margin="5" Header="Redistributable packages found: 0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -55,11 +56,10 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Button Grid.Column="0" Grid.Row="0" Margin="5" Padding="5" Content="Search" />
+                <Button Grid.Column="0" Grid.Row="0" Margin="5" Padding="5" Content="Search" Command="{Binding Search}" />
                 <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="Remove Duplicate Packages" />
 
-                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" MinHeight="200" Margin="5" ItemsSource="{Binding Inventory}" SelectionMode="Single"
-                          AutoGenerateColumns="False"
+                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="5" MinHeight="140" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
                           IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Width="Auto" Binding="{Binding Select}" Header="Select" />
