--- a/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
+++ b/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:tikitwo_steam_cleaner.WPF.ViewModels"
     x:Class="tikitwo_steam_cleaner.WPF.Views.MainWindow"
-    mc:Ignorable="d" Title="TikiTwo Steam Cleaner" SizeToContent="WidthAndHeight">
+    mc:Ignorable="d" Title="TikiTwo Steam Cleaner" SizeToContent="WidthAndHeight" MinWidth="500" MinHeight="500">
 
     <Window.DataContext>
         <viewModels:MainViewModel />
@@ -35,11 +35,12 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <ListView Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Margin="5" MinWidth="300" MinHeight="140" ItemsSource="{Binding FoldersToSearch}" SelectedItem="{Binding SelectedFolder}" />
+                <ListView Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Margin="5" MinWidth="300" MinHeight="140" ItemsSource="{Binding FoldersToSearch}"
+                          SelectedItem="{Binding SelectedFolder}" />
 
                 <Button Grid.Column="1" Grid.Row="0" Margin="5" Padding="5" Content="Locate Automatically" Command="{Binding FindSteamFolder}" />
                 <Button Grid.Column="1" Grid.Row="1" Margin="5" Padding="5" Content="Add Custom Folder..." Command="{Binding AddFolder}" />
-                <Button Grid.Column="1" Grid.Row="2" Margin="5" Padding="5" Content="Remove Selected Folder" Command="{Binding RemoveCustomFolder}" />
+                <Button Grid.Column="1" Grid.Row="2" Margin="5" Padding="5" Content="Remove Selected Folder" Command="{Binding RemoveFolder}" />
             </Grid>
         </GroupBox>
 
@@ -57,15 +58,15 @@
                 </Grid.RowDefinitions>
 
                 <Button Grid.Column="0" Grid.Row="0" Margin="5" Padding="5" Content="Search" Command="{Binding Search}" />
-                <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="Remove Duplicate Packages" />
+                <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="Remove Packages" Command="{Binding DeletePackages}" />
 
-                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="5" MinHeight="140" ItemsSource="{Binding Inventory}" SelectionMode="Single" AutoGenerateColumns="False"
-                          IsReadOnly="True">
+                <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="5" MinHeight="140" ItemsSource="{Binding FoldersToDelete}" SelectionMode="Single"
+                          AutoGenerateColumns="False" IsReadOnly="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Select}" Header="Select" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding Selected}" Header="Selected" />
                         <DataGridTextColumn Width="Auto" Binding="{Binding Path}" Header="Path" />
                         <DataGridTextColumn Width="Auto" Binding="{Binding Size}" Header="Size (MB)" />
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Type}" Header="Name" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding Type}" Header="Type" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
