--- a/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
+++ b/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
@@ -61,12 +61,12 @@
                 <Button Grid.Column="2" Grid.Row="0" Margin="5" Padding="5" Content="Remove Packages" Command="{Binding DeletePackages}" />
 
                 <DataGrid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="5" MinHeight="140" ItemsSource="{Binding FoldersToDelete}" SelectionMode="Single"
-                          AutoGenerateColumns="False" IsReadOnly="True">
+                          AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Selected}" Header="Selected" />
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Path}" Header="Path" />
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Size}" Header="Size (MB)" />
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Type}" Header="Type" />
+                        <DataGridCheckBoxColumn Width="Auto" Binding="{Binding Selected}" Header="Selected" IsReadOnly="False" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding Path}" Header="Path" IsReadOnly="True" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding Size}" Header="Size (MB)" IsReadOnly="True" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding Type}" Header="Type" IsReadOnly="True" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
