--- a/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
+++ b/tikitwo-steam-cleaner.WPF/Views/MainWindow.xaml
@@ -65,8 +65,8 @@
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn Width="Auto" Binding="{Binding Selected}" Header="Selected" IsReadOnly="False" />
                         <DataGridTextColumn Width="Auto" Binding="{Binding Path}" Header="Path" IsReadOnly="True" />
-                        <DataGridTextColumn Width="Auto" Binding="{Binding Size}" Header="Size" IsReadOnly="True" SortMemberPath="SizeInBytes" />
-                        <DataGridTextColumn Width="*" Binding="{Binding Type}" Header="Type" IsReadOnly="True" />
+                        <DataGridTextColumn Width="Auto" Binding="{Binding DisplaySize}" Header="Size" IsReadOnly="True" SortMemberPath="SizeInBytes" />
+                        <DataGridTextColumn Width="*" Binding="{Binding DisplayType}" Header="Type" IsReadOnly="True" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
